[package]
name = "fiat-shamir"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }

sum-check-protocol = { path = "../sum-check-protocol" }

thiserror = "1.0.31"

[dev-dependencies]
ark-std = { git = "https://github.com/arkworks-rs/std" }

sha2 = "0.10.6"
