[package]
name = "fiat-shamir"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
thiserror.workspace = true
sum-check-protocol = { path = "../sum-check-protocol" }

[dev-dependencies]
ark-std.workspace = true
sha2.workspace = true
