[package]
name = "fiat-shamir"
version.workspace = true
edition.workspace = true

[dependencies]
ark-serialize.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
thiserror.workspace = true
sum-check-protocol = { path = "../sum-check-protocol" }

[dev-dependencies]
ark-std.workspace = true
sha2.workspace = true
