[package]
name = "gkr-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
thiserror.workspace = true
sum-check-protocol = { path = "../sum-check-protocol" }

[dev-dependencies]
pretty_assertions.workspace = true
