[package]
name = "matrix-multiplication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
sum-check-protocol = { path = "../sum-check-protocol" }

[dev-dependencies]
ark-std = { git = "https://github.com/arkworks-rs/std" }
bitvec = "1"
pretty_assertions = "1"
