[package]
name = "matrix-multiplication"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true

sum-check-protocol = { path = "../sum-check-protocol" }
multilinear-extensions = { path = "../multilinear-extensions" }

[dev-dependencies]
ark-std.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
pretty_assertions.workspace = true

[[bench]]
name = "mm_benchmark"
harness = false
