[package]
name = "relaxed-pcs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4"

gkr-protocol = { path = "../gkr-protocol" }
thiserror = "1.0.38"

[dev-dependencies]
ark-ed-on-bls12-381 = "0.4"
pretty_assertions = "1"
