[package]
name = "relaxed-pcs"
version.workspace = true
edition.workspace = true

[dependencies]
ark-crypto-primitives = { workspace = true, features = ["merkle_tree"] }
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
thiserror.workspace = true
gkr-protocol = { path = "../gkr-protocol" }

[dev-dependencies]
ark-ed-on-bls12-381.workspace = true
pretty_assertions.workspace = true
