[package]
name = "sum-check-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-poly = "0.5"
ark-std = "0.4" 
bitvec = "1.0.0"
thiserror = "1.0.31"

[dev-dependencies]
pretty_assertions = "1"
